# OpenFactCheck

./: .bumpversion.cfg  .gitignore  CNAME  CODE_OF_CONDUCT.md  LICENSE  README.md  VERSION  error_output.txt  index.html  packages.txt  pre-requirements.txt  pyproject.toml  readthedocs.yaml  requirements.txt
.github/workflows/: main.yaml  prerelease.yaml  release-manual.yaml  release-patch.yaml  release.yaml  release_patch.yaml
.streamlit/: config.toml
accounts/: hasaniqbal-ds.backend.conf  hasaniqbal-ds.tfvars.json
configs/: production.json
configs/solvers/: rarr.yaml
deployments/terraform/: .terraform.lock.hcl  aws_dynamodb.tf  main.tf  terraform-apply.sh
docs/: versions.py
docs/scripts/: bumpversion.sh
docs/src/: conf.py  index.md
docs/src/_extension/: component_directive.py
docs/src/_static/: custom-icons.js  versions.json
docs/src/_static/_css/: custom.css
docs/src/_templates/: class.md
docs/src/reference/: core.md  evaluator.md  index.md  lib.md  solvers.md
docs/src/reference/api/: openfactcheck.FactCheckerState.rst  openfactcheck.OpenFactCheck.rst  openfactcheck.Solver.rst  openfactcheck.StandardTaskSolver.rst  openfactcheck.errors.ConfigError.rst  openfactcheck.errors.ConfigValidationError.rst  openfactcheck.evaluator.CheckerEvaluator.rst  openfactcheck.evaluator.LLMEvaluator.rst  openfactcheck.evaluator.ResponseEvaluator.rst  openfactcheck.lib.CustomFileLoggingFormatter.rst  openfactcheck.lib.CustomStreamLoggingFormatter.rst  openfactcheck.lib.OpenFactCheckConfig.rst  openfactcheck.lib.SolversConfig.rst  openfactcheck.lib.get_logger.rst  openfactcheck.lib.set_logger_level.rst  openfactcheck.solvers.dummy.confused_claim_examiner.ConfusedClaimExaminer.rst  openfactcheck.solvers.dummy.fake_claim_extractor.FakeClaimExtractor.rst  openfactcheck.solvers.dummy.ignorant_search_engine_retriever.IgnorantSearchEngineRetriever.rst  openfactcheck.solvers.dummy.useless_response_regenerator.UselessResponseRegenerator.rst  openfactcheck.solvers.factcheckgpt.factcheckgpt_cp.FactCheckGPTClaimProcessor.rst  openfactcheck.solvers.factcheckgpt.factcheckgpt_rtv.FactCheckGPTRetriever.rst  openfactcheck.solvers.factcheckgpt.factcheckgpt_vfr.FactCheckGPTVerifier.rst  openfactcheck.solvers.factool.all_pass_abstain_detector.AllPassAbstainDetector.rst  openfactcheck.solvers.factool.concat_response_regenerator.ConcatResponseRegenerator.rst  openfactcheck.solvers.factool.factool_blackbox.FactoolBlackboxSolver.rst  openfactcheck.solvers.factool.factool_blackbox_post_editor.FactoolBlackboxPostEditor.rst  openfactcheck.solvers.factool.factool_claim_examiner.FactoolClaimExaminer.rst  openfactcheck.solvers.factool.factool_decontextualizer.FactoolDecontextualizer.rst  openfactcheck.solvers.factool.factool_evidence_retriever.FactoolEvidenceRetriever.rst  openfactcheck.solvers.factool.factool_post_editor.FactoolPostEditor.rst  openfactcheck.solvers.rarr.rarr_agreement_gate.RARRAgreementGate.rst  openfactcheck.solvers.rarr.rarr_concat_response_regenerator.RARRConcatResponseRegenerator.rst  openfactcheck.solvers.rarr.rarr_editor.RARREditor.rst  openfactcheck.solvers.rarr.rarr_llm_retriever.RARRLLMRetriever.rst  openfactcheck.solvers.rarr.rarr_question_generator.RARRQuestionGenerator.rst  openfactcheck.solvers.rarr.rarr_search_engine_retriever.RARRSearchEngineRetriever.rst  openfactcheck.solvers.tutorial.all_pass_abstain_detector.AllPassAbstainDetector.rst  openfactcheck.solvers.tutorial.chatgpt_decontextulizer.ChatGPTDecontextualizer.rst  openfactcheck.solvers.tutorial.chatgpt_post_editor.ChatGPTPostEditor.rst  openfactcheck.solvers.tutorial.chatgpt_worthiness_filter.ChatGPTWorthinessFilter.rst  (+11 more)
environments/: production.json
scripts/: app.sh  cli.sh  common.sh  deploy.sh  release.sh  spaces.sh
src/openfactcheck/: __init__.py  base.py  cli.py  errors.py  solver.py  state.py
src/openfactcheck/app/: __init__.py  app.py  dialogs.py  evaluate_factchecker.py  evaluate_llm.py  evaluate_response.py  sidebar.py  utils.py
src/openfactcheck/core/: __init__.py  base.py  cli.py  solver.py  standard_task_solver.py  state.py
src/openfactcheck/data/: factcheck-bench.jsonl  factoolqa.jsonl  factscore-bio.jsonl  felm-wk.jsonl  freshqa.jsonl  snowballing.jsonl
src/openfactcheck/evaluator/: __init__.py
src/openfactcheck/evaluator/checker/: __init__.py  evaluate.py
src/openfactcheck/evaluator/factchecker/: evaluate.py
src/openfactcheck/evaluator/llm/: __init__.py  evaluate.py  evaluate_freetext.py  evaluate_freshqa.py  evaluate_selfaware.py  evaluate_snowballing.py  report.py
src/openfactcheck/evaluator/response/: __init__.py  evaluate.py
src/openfactcheck/factchecker/: evaluate.py
src/openfactcheck/lib/: __init__.py  config.py  errors.py  logger.py  utils.py
src/openfactcheck/services/: dynamodbinterface.py  model.py
src/openfactcheck/solvers/dummy/: confused_claim_examiner.py  fake_claim_extractor.py  ignorant_search_engine_retriever.py  useless_response_regenerator.py
src/openfactcheck/solvers/factcheckgpt/: factcheckgpt_cp.py  factcheckgpt_rtv.py  factcheckgpt_vfr.py
src/openfactcheck/solvers/factool/: all_pass_abstain_detector.py  concat_response_regenerator.py  factool_blackbox.py  factool_blackbox_post_editor.py  factool_claim_examiner.py  factool_decontextualizer.py  factool_evidence_retriever.py  factool_post_editor.py
src/openfactcheck/solvers/rarr/: rarr_agreement_gate.py  rarr_concat_response_regenerator.py  rarr_editor.py  rarr_llm_retriever.py  rarr_question_generator.py  rarr_search_engine_retriever.py
src/openfactcheck/solvers/rarr_solvers/: rarr_agreement_gate.py  rarr_editor.py  rarr_llm_retriever.py  rarr_question_generator.py
src/openfactcheck/solvers/tutorial/: all_pass_abstain_detector.py  chatgpt_claim_examiner.py  chatgpt_decontextulizer.py  chatgpt_post_editor.py  chatgpt_worthiness_filter.py  concat_response_regenerator.py  search_engine_evidence_retriever.py  spacy_response_decomposer.py
src/openfactcheck/solvers/urdufactcheck/: urdufactcheck_cp.py  urdufactcheck_rtv.py  urdufactcheck_rtv_thtr.py  (+2 more)
src/openfactcheck/utils/: logging.py
(+24 files in other folders)
