[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  {name = "Hasan Iqbal", email = "hasan.iqbal@mbzuai.ac.ae"},
  {name = "Yuxia Wang", email = "yuxia.wang@mbzuai.ac.ae"},
  {name = "Minghan Wang", email = "minghan.wang@monash.edu"},
  {name = "Georgi Georgiev", email = "geoergi@uni-sofia.bg"},
  {name = "Jiahui Geng", email = "jiahui.geng@mbzuai.ac.ae"},
  {name = "Preslav Nakov", email = "preslav.nakov@mbzuai.ac.ae"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "An Open-source Factuality Evaluation Demo for LLMs"
keywords = ["NLP", "deep learning", "transformer", "pytorch", "factuality evaluation"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Hasan Iqbal", email = "hasan.iqbal@mbzuai.ac.ae"},
]
name = "openfactcheck"
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.10rc2"

[project.urls]
"Bug Tracker" = "https://github.com/hasaniqbal777/openfactcheck/issues"
"Documentation" = "https://openfactcheck.readthedocs.io"
"Homepage" = "https://github.com/hasaniqbal777/openfactcheck"
"Repository" = "https://github.com/hasaniqbal777/openfactcheck"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-design",
  "sphinx-favicon",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinxext-rediraffe",
  "sphinx-togglebutton",
  "pydata-sphinx-theme",
  "myst-parser",
]

[tool.setuptools.package-data]
openfactcheck = [
  "data/*.jsonl",
  "templates/solver_configs/*.yaml",
  "templates/configs/*.json",
  "templates/factchecker/*.jsonl",
  "templates/factchecker/*.csv",
  "templates/factchecker/**/*.jsonl",
  "templates/llm/*.csv",
  "templates/report/*.tex",
]

[tool.ruff]
line-length = 119

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
# Never enforce `C901` (function complexity violations).
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["openfactcheck"]
lines-after-imports = 2
